[package]
name = "netscan"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

default-net = "0.13.1"
ipnetwork = "0.20.0"
netif = "0.1.6"
futures = { version = "0.3.27", features = ["thread-pool"] }

[target.'cfg(windows)'.dependencies]

ipconfig = "0.3.1"


[target.'cfg(unix)'.dependencies]

interfaces = "0.0.8"
